--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EV ChargeMap - Find Electric Vehicle Charging Stations Near You</title>
+    <title>EV ChargeMap-EVMapFinder MAIN
+ - Find Electric Vehicle Charging Stations Near You</title>
     <meta name="description" content="Find real-time EV charging stations with live availability, pricing, and reviews. Search 60,000+ electric vehicle charging locations across the US.">
     <meta name="keywords" content="EV charging stations, electric vehicle charging, Tesla supercharger, ChargePoint, Electrify America, EV charging near me">
     <meta name="author" content="EV ChargeMap">
